tests/baselines/reference/collisionExportsRequireAndUninstantiatedModule.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
collisionExportsRequireAndUninstantiatedModule.ts(6,5): error TS2322: Type 'null' is not assignable to type 'I'.
collisionExportsRequireAndUninstantiatedModule.ts(13,5): error TS2322: Type 'null' is not assignable to type 'I'.


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== collisionExportsRequireAndUninstantiatedModule.ts (2 errors) ====
    export namespace require { // no error 
        export interface I {
        }
    }
    export function foo(): require.I {
        return null;
        ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'I'.
    }
    export namespace exports { // no error
        export interface I {
        }
    }
    export function foo2(): exports.I {
        return null;
        ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'I'.
    }